# MCP-Dataiku

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_dataiku/: __init__.py  client.py  config.py  server.py
src/mcp_dataiku/tools/: __init__.py
